--- a/css/BackEnd/assets/css/style.css
+++ b/css/BackEnd/assets/css/style.css
@@ -46,7 +46,7 @@ limitations under the License.*/
     
 
 .navbar-static-side ul li {
-    border-bottom:1px solid #84B899 !important;
+    border-bottom:1px solid #ffffff !important;
 }
 
 /* Navigation */
